# bolotie

./: .gitmodules  CMakeLists.txt  README.rst  parents_beautify.awk  plot_utree.R  requirements.txt  run.py
example_hiv/: RUN.txt  seqs.clus  seqs.fa
examples/: clus  index.counts  index.probs  index.totals  old  ref.fa  seqs.fa
src/: aln.hpp  arg_parse.cpp  arg_parse.hpp  bolotie.cpp  build_probability_table.hpp  common.hpp  cons.hpp  cons_mask.hpp  find_best_path.hpp  parents.hpp
tests/: sim.py
